Use concrete catalog entry type instead of Pair